# mcp-server-datahub

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPING.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY.md  docker-compose.yml  gemini-extension.json  pyproject.toml
.github/workflows/: ci.yml  docker.yml  wheels.yml
docs/: INTEGRATION_TEST_DESIGN.md  sync-status-2026-04-10.md
scripts/: SMOKE_CHECK.md  smoke_check.py  test_all_modes.sh  test_main_tools.py  wait_for_ingestion.py
src/mcp_server_datahub/: __main__.py  _auth.py  _auth_obo.py  _telemetry.py  dependencies.py  document_tools_middleware.py  fastmcp_helpers.py  graphql_helpers.py  mcp_server.py  oauth_endpoints.py  oidc_token_validator.py  search_filter_parser.py  sub_entity_urls.py  token_validator.py  version_requirements.py  view_helpers.py  view_preference.py
src/mcp_server_datahub/gql/: entity_details.gql  mutations.gql  search.gql
src/mcp_server_datahub/tools/: _mutation_helpers.py  assertions.py  dataset_queries.py  tags.py  (+11 more)
tests/: addon_bootstrap_mce.json  conftest.py  test_async_setup.py  test_fallback_token.py  test_main_cli.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_server_helpers.py  test_multithread_client.py  test_oauth_integration.py  test_per_request_client.py  test_semantic_search.py
tests/test_mcp/: test_async_setup.py  test_auth_middleware.py  test_get_entities.py  test_get_entities_queries.py  test_health.py  test_lineage_paths_between.py  test_list_schema_fields.py  test_mcp_server_helpers.py  test_read_only.py  test_sub_entity_urls.py  test_view_preference.py
(+1 files in other folders)
