[project]
name = "mcp-server-datahub"
dynamic = ["version"]
description = "A Model Context Protocol (MCP) server for DataHub"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "acryl-datahub==1.1.0",
    "jmespath~=1.0.1",
]
license = "Apache-2.0"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "setuptools-scm>=8.3.1",
    "types-jmespath~=1.0.1",
]

[project.urls]
"Source" = "https://github.com/acryldata/mcp-server-datahub"

[project.scripts]
mcp-server-datahub = "mcp_server_datahub.__main__:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

#[tool.uv.sources]
#acryl-datahub = { path = "../datahub/metadata-ingestion", editable = true }

[tool.setuptools_scm]
# Enable setuptools-scm for dynamic versioning from git

[tool.setuptools.packages.find]
where = ["src"]
